# naritai

./: pyproject.toml  setup.cfg
naritai/: __init__.py  dag.py
test/: __init__.py  test_dag.py
