[metadata]
name = naritai
version = attr: naritai.__version__
author = Nonowazu
author_email = oowazu.nonowazu@gmail.com
description = Pipelines for use with nari
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requiers = >=3.10
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    docs*
    scripts*
    test*

[options.package_data]
naritai = py.typed

[options.extras_require]
dev =
    mypy==0.942
    pylint==2.13.4
    coverage[toml]==6.5.0
    black==22.10.0
docs =
    sphinx==5.2.3
    sphinx-rtd-theme==1.0.0
